<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AthlasApp</string>
    <string name="app_splash">Athletic Club App</string>
    <string name="app_login">Login</string>
    <string name="app_reg">Registration</string>
    <string name="app_preferences">Home Page</string>
    <string name="app_timer">Work Out Timer</string>
    <string name="app_map">Work Out Map</string>
    <string name="profilePage">Profile</string>
    <string name="app_message">Athlete Message Forum</string>
    <string name="app_weather">Where Ever the Weather!</string>
    <string name="profile_heading">Edit Personal Details</string>
    <string name="app_routes">List Of Route Time and Distance</string>
    <string name="app_athletes">List Of All Athletes</string>
    <string name="app_welcome">Welcome</string>
     
    <string name="pref">Preferences</string>
    <string name="welcome">Login successful, Welcome </string>
    <string name="athlete">XXX</string>
    <string name="menu_settings">Settings</string>
    <string name="txtLoginUsername">Username</string>
    <string name="txtLoginPassword">Password</string>
    <string name="txtFullname">Full Name</string>
    <string name="txtRegLink">New to App? Register here</string>
    <string name="txtLoginLink">Already has account! Login here</string>
    <string name="logo">Application logo</string>
    <string name="timeStarter">Time Starter</string>
    <string name="distTrav">Distance Travelled: </string>
    <string name="time_left">Time Left: </string>
    <string name="distance">0:00</string>
    <string name="distanceKm">Km/m/ft</string>
    <string name="oneThirty">1:30</string>
    <string name="zeros">0:00</string>
    
    <string name="profile_image">Profile Image</string>
    <string name="profile_name">Full name: </string>
    <string name="profile_sex">Sex: </string>
    <string name="profile_age">Age: </string>
    <string name="profile_edit">Edit</string>
    <string name="profile_about">About: </string>
    <string name="profile_city">City: </string>
    <string name="profile_country">Country: </string>
    
    <string name="edtMessagerName">Send to..</string>
    <!--Other string resources also defined in this file… --> 
    <string name="feedbacktype0">Choose..</string>   
    <string name="feedbacktype1">Praise</string>  
    <string name="feedbacktype2">Gripe</string>  
    <string name="feedbacktype3">Suggestion</string>  
    <string name="feedbacktype4">Bug</string>  
    <string name="feedbackbody">Type message</string> 
    <string name="feedbackresponse">feedbackresponse</string>  
    <string name="feedbackbutton">Send Message</string>  
    
    <string name="WeatherHeader">Trying to Predict the Irish Weather!</string>
    <string name="WeatherForecast">Five Day Forecast for Duleek</string>  
    <string name="action_setting">Action Setting</string> 
    
    <style name="ButtonText">
	    <item name="android:layout_width">fill_parent</item>
	    <item name="android:layout_height">wrap_content</item>
	    <item name="android:textColor">#ffffff</item>
	    <item name="android:gravity">center</item>
	    <item name="android:layout_margin">3dp</item>
	    <item name="android:textSize">30sp</item>
	    <item name="android:textStyle">bold</item>
	    <item name="android:shadowColor">#000000</item>
	    <item name="android:shadowDx">1</item>
	    <item name="android:shadowDy">1</item>
	    <item name="android:shadowRadius">2</item>
	</style>

</resources>

