<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    
		<RelativeLayout
		    xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" 
		    android:background="#ffffff">
		    
		    
		    
		    <!--  Header Starts-->
			<LinearLayout 
			    xmlns:android="http://schemas.android.com/apk/res/android"
			    android:id="@+id/header"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:background="@layout/header_gradient"
			    android:paddingTop="5dip"
			    android:paddingBottom="5dip">
			    
			        <!-- Logo Start-->
			        <ImageView 
			            android:src="@drawable/logo2"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:contentDescription="@string/logo"
			            android:layout_marginLeft="10dip"/>
			        <!-- Logo Ends -->
			        
			        <TextView
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_gravity="center"
			            android:text="@string/app_login"
			            android:textColor="#0099CC"
			            android:textSize="35sp" 
					    android:gravity="center_horizontal"
				        android:textAppearance="?android:attr/textAppearanceLarge"
				        android:textStyle="bold"
				        android:typeface="sans" 
				         android:layout_marginLeft="35dip"
			            />
			        
			</LinearLayout>
			<!--  Header Ends -->
			
			
    	<!--  Login form starts -->
    	<LinearLayout
    	  xmlns:android="http://schemas.android.com/apk/res/android"
		  android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dp"
          android:layout_below="@id/header"
          >

	
	            <EditText
	                android:id="@+id/edtLoginUsername"
	                android:layout_width="match_parent"
	                android:layout_height="50dp"
	                android:ems="10"
	                android:hint="@string/txtLoginUsername"
	                android:maxLines="1"
	                android:layout_marginTop="40dp"
                	android:layout_marginBottom="20dp"
	                >
	                
					 <requestFocus />
	            </EditText>
		            	
	            <EditText
	                android:id="@+id/edtLoginPassword"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:ems="10"
	                android:hint="@string/txtLoginPassword"
	                android:inputType="textPassword"
	                android:maxLines="1"
	                android:layout_marginTop="10dp"
	                android:layout_marginBottom="10dp"
	                />
	            
	            <Button
	            android:id="@+id/login"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/login" 
	            android:layout_marginTop="20dp"
	            android:layout_marginBottom="10dp"
	            />
	            
	            <TextView 
		            android:id="@+id/link_to_register"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="40dp"
	                android:layout_marginBottom="40dp"
	                android:text="@string/txtRegLink"
	                android:gravity="center"
	                android:textSize="20sp"
	                android:textColor="#0b84aa"
	                />
	            
    			</LinearLayout>
	            <!--  Login form ends -->
	            
	            <!-- Footer Start -->
					<LinearLayout 
					    xmlns:android="http://schemas.android.com/apk/res/android"
					    android:id="@+id/footer"
					    android:layout_width="fill_parent"
					    android:layout_height="90dip"
					    android:background="@layout/footer_repeat"
					    android:layout_alignParentBottom="true">
					</LinearLayout>
				<!-- Footer Ends -->

	</RelativeLayout>           
</ScrollView>