<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:ignore="NestedScrolling" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >

        <!-- Header Starts -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingBottom="5dip"
            android:paddingTop="5dip" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo2" />
            <!-- Logo Ends -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="35dip"
                android:gravity="center_horizontal"
                android:text="@string/app_weather"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#0099CC"
                android:textSize="35sp"
                android:textStyle="bold"
                android:typeface="sans" />
        </LinearLayout>
        <!-- Header Ends -->


        <!-- Weather form starts -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/txtHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/WeatherHeader"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:typeface="sans" />

            <TextView
                android:id="@+id/txtCurrentWeather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtForecastHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/WeatherForecast"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold"
                android:typeface="sans" />

            <ListView
                android:id="@+id/weatherListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dividerHeight="10dp"
                android:gravity="center_horizontal" >
            </ListView>
        </LinearLayout>

        <!-- Weather form ends -->

    </RelativeLayout>

</ScrollView>