<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:ignore="UseCompoundDrawables,UselessParent" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff" >

        <!-- Header Starts -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@layout/header_gradient"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <!-- Logo Start -->

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo2" />
            <!-- Logo Ends -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="35dip"
                android:gravity="center_horizontal"
                android:text="@string/profilePage"
                android:textColor="#0099CC"
                android:textSize="35sp"
                android:textStyle="bold"
                android:typeface="sans" >
            </TextView>
        </LinearLayout>
        <!-- Header Ends -->


        <!-- The lot - Profile details class starts -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/header"
            android:background="#CCFFFF"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="50dp" >

            <!-- Profile1 details class starts -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="horizontal"
                android:paddingBottom="15dp"
                android:paddingTop="15dp" >

                <LinearLayout
                    android:layout_width="152dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtProfileName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="15dp"
                        android:text="@string/profile_name"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtProfileSex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="15dp"
                        android:text="@string/profile_sex"
                        android:textColor="#000000"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/txtProfileAge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="15dp"
                        android:text="@string/profile_age"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="162dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:contentDescription="@string/profile_image"
                        android:src="@drawable/profiler" />

                    <TextView
                        android:id="@+id/txtProfileEditBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="15dp"
                        android:text="@string/profile_edit"
                        android:textColor="#680000"
                        android:textSize="40sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- Profile1 details class ends -->


            <!-- Profile2 details class starts -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:orientation="horizontal"
                android:paddingBottom="15dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="15dp"
                        android:text="@string/profile_about"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtProfileAbout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/profile_about"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- Profile2 details class ends -->


            <!-- Profile3 details class starts -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:background="#FFFFFF"
                android:orientation="horizontal"
                android:paddingBottom="15dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="15dp"
                        android:text="@string/profile_age"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtProfileAge1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/profile_age"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- Profile3 details class ends -->


            <!-- Profile4 details class starts -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:orientation="horizontal"
                android:paddingBottom="15dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="15dp"
                        android:text="@string/profile_city"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtProfileCity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/profile_city"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- Profile4 details class ends -->


            <!-- Profile5 details class starts -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:orientation="horizontal"
                android:paddingBottom="15dp" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginLeft="15dp"
                        android:text="@string/profile_country"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/txtProfileCountry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/profile_country"
                        android:textColor="#000000"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <!-- Profile5 details class ends -->


            <!-- Profile Edit 6 Routes Button - Edit class starts here -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:orientation="horizontal"
                android:paddingBottom="15dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btnCheckWorkoutRoutes"
                        style="@style/ButtonText"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:background="@drawable/btn_yellow"
                        android:text="@string/btnRun"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <!-- Profile Edit 6 Routes Button - Edit class ends here -->

        </LinearLayout>
        <!-- The lot - Profile details class starts -->


        <!-- Footer Start -->

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:layout_alignParentBottom="true"
            android:background="@layout/footer_repeat" >
        </LinearLayout>
        <!-- Footer Ends -->

    </RelativeLayout>

</ScrollView>